align-items:start -> align-items:flex-start to stop autoprefixer warning break deploy

--- a/src/components/attendee/NavOverlay/NavOverlay.module.scss
+++ b/src/components/attendee/NavOverlay/NavOverlay.module.scss
@@ -45,7 +45,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: start;
+  align-items: flex-start;
   padding: $whitespace * 4 $whitespace * 3;
   width: 100%;
 
@@ -71,7 +71,7 @@
     transparent 0,
     rgba(0, 0, 0, 0.2) 40px,
     rgba(0, 0, 0, 0.4) 60px,
-    #000 80px
+    #000000 80px
   );
 }
 
